Infinite Heaven changelog

r235
Fix: UAVs on FOB should show their correct grade.
Bug was due from me missing a subltle change while merging the mgsv 1.09 patch in April 2016, ouch.
It got lost in the noise of variable name changes due to the minified lua files. Thanks elquinto for the belated report.

r234 - 2020-02-10
Refactor: Data: Build veh_rl_*_ih packs based on the veh_rl_ packs, removed modded veh_rl fox2s, which suould free up mods for the player vehicles without conflicting with that.
IH modified the player / veh_rl vehicle packs for it's free roam vehicle patrol option.

1. Because the packs were nice complete packs for vehicles, which was important in the early days when I didn't have the knowledge or tooling to create my own fpks.

2. To bump up the instance count for TppVehicle2BodyData and TppVehicle2AttachmentData because I hit the issue of them using up the instances resulting in sideops vehicles appearing invisible.

Though I still don't understand the logic on that since I can have more vehicles than instances in the patrols and they'll still show, but the sideops, which aren't even using the patrol vehicle packs will be affected.

In some ways it's similar to the useextendfova problem wildcards have with sideops.

Thanks placeholderthesteam for the prompt.

InfDemo,InfMenu,InfMenuDefs,InfQuickMenuDefs:
Added: In-Cutscene IH menu can be opened while cutscene playing.
Fixed: Quick menu not working while in cutscenes.
Change: Pause cutscene bind changed from EVADE (dive button) to STANCE (crouch button)

InfNPC:
Change: Additional NPCs changed to a sub menu where you can individually set which additional npcs you want to appear - thanks Muffins for the suggestion.

Fix: Completion percentage dropping to 99% and completed tasks counting higher than max - thanks AsiaSkyly and badbard99 for the reports.

Fix: MB staff died message should appear in Mission 43 - thanks GrimreaperIII3 for the report.