@@ -2034,7 +2034,7 @@
 <div>10: <a href="#mbOceanMenu">MB Ocean menu</a></div>
 </div>
 <div id="menuItem">
-<div>11: <a href="#playerRestrictionsInMissionMenu">Markers menu</a></div>
+<div>11: <a href="#markersInMissionMenu">Markers menu</a></div>
 </div>
 <div id="menuItem">
 <div>12: <a href="#miscInMissionMenu">Misc menu</a></div>
@@ -2046,25 +2046,28 @@
 <div>14: <a href="#objectsMenu">Objects menu</a></div>
 </div>
 <div id="menuItem">
-<div>15: <a href="#positionsMenu">Positions menu</a></div>
+<div>15: <a href="#playerRestrictionsInMissionMenu">Player restrictions menu</a></div>
 </div>
 <div id="menuItem">
-<div>16: <a href="#routesMenu">Routes menu</a></div>
+<div>16: <a href="#positionsMenu">Positions menu</a></div>
 </div>
 <div id="menuItem">
-<div>17: <a href="#mbStaffInMissionMenu">Staff menu</a></div>
+<div>17: <a href="#routesMenu">Routes menu</a></div>
 </div>
 <div id="menuItem">
-<div>18: <a href="#supportHeliMenu">Support heli menu</a></div>
+<div>18: <a href="#mbStaffInMissionMenu">Staff menu</a></div>
 </div>
 <div id="menuItem">
-<div>19: <a href="#timeScaleMenu">Time scale menu</a></div>
+<div>19: <a href="#supportHeliMenu">Support heli menu</a></div>
 </div>
 <div id="menuItem">
-<div>20: <a href="#userMarkerMenu">User marker menu</a></div>
+<div>20: <a href="#timeScaleMenu">Time scale menu</a></div>
 </div>
 <div id="menuItem">
-<div>21: <a href="#weatherMenu">Weather menu</a></div>
+<div>21: <a href="#userMarkerMenu">User marker menu</a></div>
+</div>
+<div id="menuItem">
+<div>22: <a href="#weatherMenu">Weather menu</a></div>
 </div>
 <div id="menuItem">
 </div>
@@ -2568,7 +2571,7 @@
 <br/>
 <div id="menu">
 <div id="menuTitle">
-<div id="playerRestrictionsInMissionMenu">Markers menu</div>
+<div id="markersInMissionMenu">Markers menu</div>
 </div>
 <div id="menuItem">
 <div>1: Disable head markers : Off, On</div>
@@ -2663,6 +2666,27 @@
 </div>
 <div id="menuItem">
 <div>6: Browse object list : Player</div>
+</div>
+<div id="menuItem">
+</div>
+<div id="menuItem">
+</div>
+</div>
+<br/>
+<div id="menu">
+<div id="menuTitle">
+<div id="playerRestrictionsInMissionMenu">Player restrictions menu</div>
+</div>
+<div id="menuItem">
+<div>1: Disable head markers : Off, On</div>
+<div id="itemHelp">Disables markers above soldiers and objects</div>
+</div>
+<div id="menuItem">
+<div>2: Disable world markers : Off, On</div>
+<div id="itemHelp">Disables objective and placed markers</div>
+</div>
+<div id="menuItem">
+<div>3: Game over on combat alert : Off, On</div>
 </div>
 <div id="menuItem">
 </div>
