@@ -1,9 +1,17 @@
 Infinite Heaven changelog
 
-r235
+r235 - 2020-03-15
+gameOverOnDiscovery/ now works in free roam.
+gameOverOnDiscovery added to playerRestrictionsInMissionMenu
+playerRestrictionsInMissionMenu added (actually renamed back to it's actual name and markersInMissionMenu split off). Thanks Steve Harvery for the prompt.
+
 Fix: UAVs on FOB should show their correct grade.
 Bug was due from me missing a subltle change while merging the mgsv 1.09 patch in April 2016, ouch.
 It got lost in the noise of variable name changes due to the minified lua files. Thanks elquinto for the belated report.
+
+InfUserMarker.PrintMarkerGameObject
+Fix: PrintMarkerGameObject sol svars print.
+Added: Prints GetPosition of object.
 
 r234 - 2020-02-10
 Refactor: Data: Build veh_rl_*_ih packs based on the veh_rl_ packs, removed modded veh_rl fox2s, which suould free up mods for the player vehicles without conflicting with that.
